Terminada la deteccion de eventos y añadidas / cambiadas varias cosas